# sequences-time-series-course

./: LICENSE  README.md  lessons.ipynb  pyproject.toml
time_series_course/: __init__.py  forecasting.py  models.py  preprocessing.py  synthetic_data.py  test_forecasting.py  test_models.py  test_train.py  train.py  utils.py
